--- a/Website/style.css
+++ b/Website/style.css
@@ -277,19 +277,19 @@ a {
 }
 
 .item-3 {
-    background-image: url("Image/Background/image3.jpg");
+    background-image: url("Image/Background/Image3.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .item-4 {
-    background-image: url("Image/Background/image4.jpg");
+    background-image: url("Image/Background/Image4.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .item-5 {
-    background-image: url("Image/Background/image6.jpg");
+    background-image: url("Image/Background/Image6.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
